tests/neg-macros/splice-in-top-level-splice-2.scala
import scala.quoted.*

object Foo {
  inline def foo(): Int = ${$x} // error
  def x(using Quotes): Expr[Expr[Int]] = '{ '{1} }
}
